<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/eUserName2"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="92dp"
        android:autofillHints="@string/UserName"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eUserPhone2"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/UserPhone"
        android:ems="10"
        android:hint="@string/UserPhone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eUserName2" />

    <EditText
        android:id="@+id/eAccountName2"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/AccountName"
        android:ems="10"
        android:hint="@string/AccountName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eUserPhone2" />

    <EditText
        android:id="@+id/eAccountPass2"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/AccountPass"
        android:ems="10"
        android:hint="@string/AccountPass"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eAccountName2" />

    <Spinner
        android:id="@+id/spinnerRole2"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="20dp"
        android:tooltipText="@string/UserRole"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eAccountPass2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        android:text="@string/UserID"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eUserID2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/UserID"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>