<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp">

    <EditText
        android:id="@+id/eUserName"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/UserName"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eUserPhone"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/UserPhone"
        android:ems="10"
        android:hint="@string/UserPhone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eUserName" />

    <EditText
        android:id="@+id/eAccountName"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/AccountName"
        android:ems="10"
        android:hint="@string/AccountName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eUserPhone" />

    <EditText
        android:id="@+id/eAccountPass"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/AccountPass"
        android:ems="10"
        android:hint="@string/AccountPass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eAccountName" />

    <Spinner
        android:id="@+id/spinnerRole"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eAccountPass" />

</androidx.constraintlayout.widget.ConstraintLayout>