<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/txtRoleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:text="@string/role_ID"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imgUserRole"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRoleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:text="@string/role_name"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtRoleID"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgUserRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/UserRole"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_admin_panel_settings_black_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>